--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: msmbstyle
+Package: pinkstyle
 Type: Package
-Title: MSMB Styles for R Markdown Documents
-Version: 0.0.11
+Title: Pink MSMB Styles for R Markdown Documents
+Version: 0.0.1
+Date: 2019-08-06
 Authors@R: c(
-    person("Mike", "Smith", role = c("aut", "cre"), email = "grimbough@gmail.com")
+    person("Francisco", "Felix", role = c("aut", "cre"), email = "fhcflx@outlook.com")
     )
-Description: Provides R Markdown output formats to use with Modern Statistics 
-    for Modern Biology.
+Description: Provides R Markdown output formats to use with my blog. Forked from msmbstyle package.
 License: GPL-3
 LazyData: TRUE
 Depends:
